<resources>

<<<<<<< HEAD
    <string name="app_name">Capsule</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
=======
    <string name="app_name">定位胶囊</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">定位胶囊</string>
>>>>>>> master
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register">新用户注册</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="input_password">请输入密码</string>
<<<<<<< HEAD
    <string name="exit">退出</string>
    <string name="submit">确定</string>
    <string name="cancel">取消</string>
    <string name="logout">注销登录</string>
=======
>>>>>>> master
    <string name="number">号码</string>
    <string name="input_number">请输入手机号码</string>
    <string name="forget_password"><u>忘记密码？</u></string>
    <string name="register_agreement">注册即您表示同意</string>
    <string name="register_agreement2"><u>使用条款和隐私协议</u></string>
    <string name="register_put_username">请输入您的姓名</string>
    <string name="find_friend">找TA</string>
    <string name="family_text">亲密</string>
    <string name="friend_text">好友</string>
    <string name="all_friends_text">全部</string>
    <string name="search_friend_hint">搜索联系人</string>
<<<<<<< HEAD
    <string name="current_position">定位当前位置</string>
    <string name="foreground">capsule_foreground</string>
    <string name="debug_tag">Capsule</string>
    <string name="login_name">登录名</string>
    <string name="find_him">找TA</string>
    <string name="match_contacts">匹配手机通讯录</string>
    <string name="capsule_agreement">胶囊位置契约</string>
    <string name="update_position_rate">您的位置更新频率</string>
    <string name="warn_setting">提醒铃声设置</string>
    <string name="hiding_position">隐身</string>
    <string name="update_password">修改密码</string>
    <string name="about_capsule">关于位置胶囊</string>
    <string name="find_him_by_phone">按手机号码找TA</string>
    <string name="find_him_by_contact">从手机通讯录找TA</string>
    <string name="exit_tip_content">退出后，下次您可以直接打开，不需要输入账号密码。</string>
    <string name="logout_tip_content">注销登录后，下次请使用您的手机号登录胶囊，您确定注销登录吗？</string>
    <string name="face_setting">设置头像</string>
    <string name="user_sex">性别</string>
    <string name="capsule_name">名称</string>
    <string name="user_introdue">简介</string>
    <string name="company">公司</string>
    <string name="position">职位</string>
    <string name="school">学校</string>
    <string name="mobile_phone">手机</string>
    <string name="qq">QQ</string>
    <string name="email">邮箱</string>
    <string name="weibo_sina">新浪微博</string>
    <string name="choose_template">选择名片模板</string>
=======
    <string name="title_activity_message">MessageActivity</string>
    <string name="current_position">定位当前位置</string>
    <string name="foreground">capsule_foreground</string>
    <string name="debug_tag">capsule</string>
    <string name="title_activity_search_friend">SearchFriendActivity</string>
    <string name="title_activity_search_friend_result">SearchFriendResultActivity</string>

>>>>>>> master
</resources>