<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp" >

    <AutoCompleteTextView
        android:id="@+id/editTextNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:ems="11"
        android:hint="@string/input_number"
        android:background="@drawable/round_edittext"
        android:inputType="phone" />
 
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextNumber"
        android:ems="20"
        android:layout_marginTop="10dp"
        android:hint="@string/input_password"
        android:background="@drawable/round_edittext"
        android:inputType="textPassword" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginTop="20dp"
        android:onClick="gotoForgetPasswordActivity"
        android:text="@string/forget_password" 
        style="@style/txt"/>

    <Button android:id="@+id/loginBtn"
            android:text="@string/login"
            android:layout_width="match_parent"
        	android:layout_marginTop="15dp"
        	android:layout_height="40dip"
        	android:background="@drawable/login_btn_selector"
        	android:layout_below="@+id/textForgetPassword"
        	android:contentDescription="@string/login"
            android:onClick="doLogin"/>
</RelativeLayout>
