<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:id="@+id/setting_layout">

    <include layout="@layout/top_bar" android:id="@+id/top_bar"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_bar"
        android:fadingEdge="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="15dip">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:orientation="vertical" >

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_top_corner_no_bottom_line"
                        android:paddingLeft="12dip"
                        android:paddingTop="12dip"
                        android:paddingBottom="12dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:layout_column="0"
                            android:layout_gravity="left"
                            android:layout_marginRight="10dip"
                            android:text="@string/login_name"
                            android:textColor="@color/black"
                            android:textSize="15sp" >
                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:layout_gravity="right"
                            android:paddingRight="10dip"
                            android:text="13811302413"
                            android:textColor="@color/textBlue"
                            android:textSize="15sp" >
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_no_corner_without_bottom"
                        android:paddingLeft="12dip"
                        android:paddingTop="12dip"
                        android:paddingBottom="12dip"
                        android:onClick="findWays">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_weight="0.9"
                            android:text="@string/find_him"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_gravity="right"
                            android:layout_weight="0.1"
                            android:src="@drawable/arrows_icon" />
                    </TableRow>

                    <!--第三行 -->
                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_bottom_corner_no_top_line"
                        android:paddingLeft="12dip"
                        android:paddingTop="12dip"
                        android:paddingBottom="12dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:layout_gravity="left"
                            android:text="@string/match_contacts"
                            android:textColor="@color/black"
                            android:textSize="15sp" >
                        </TextView>

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_weight="0.1"
                            android:layout_gravity="right"
                            android:src="@drawable/arrows_icon" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:orientation="vertical" >

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_corner_line"
                        android:paddingLeft="12dip"
                        android:paddingTop="12dip"
                        android:paddingBottom="12dip"
                        android:onClick="showAgreement">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:layout_gravity="left"
                            android:text="@string/capsule_agreement"
                            android:textColor="@color/black"
                            android:textSize="15sp" >
                        </TextView>

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_weight="0.1"
                            android:layout_gravity="right"
                            android:src="@drawable/arrows_icon" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:orientation="vertical" >
                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_corner_line"
                        android:paddingLeft="12dip"
                        android:paddingTop="12dip"
                        android:paddingBottom="12dip"
                        android:onClick="updatePositionRate">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.8"
                            android:layout_gravity="left"
                            android:text="@string/update_position_rate"
                            android:textColor="@color/black"
                            android:textSize="15sp" >
                        </TextView>
                        
                        <TextView
                            android:id="@+id/rateText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/textBlue"
                            android:textSize="15sp" >
                        </TextView>
                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_weight="0.1"
                            android:layout_gravity="right"
                            android:src="@drawable/arrows_icon" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:orientation="vertical" >

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_corner_line"
                        android:paddingLeft="12dip"
                        android:paddingTop="10dip"
                        android:paddingBottom="10dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:layout_gravity="left"
                            android:text="@string/warn_setting"
                            android:textColor="@color/black"
                            android:textSize="15sp" >
                        </TextView>
                        <ImageView
                            android:id="@+id/isWarning_btn"
                            android:layout_width="85dp"
                            android:layout_height="27dp"
                            android:layout_weight="0.1"
                            android:layout_gravity="right"
                            android:layout_marginRight="4dip"
                            android:src="@drawable/radio_box_close" 
                            android:onClick="warningSetting"/>
                    </TableRow>
                </TableLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:orientation="vertical" >

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_corner_line"
                        android:paddingLeft="12dip"
                        android:paddingTop="10dip"
                        android:paddingBottom="10dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:layout_gravity="left"
                            android:text="@string/hiding_position"
                            android:textColor="@color/black"
                            android:textSize="15sp" >
                        </TextView>
                        <ImageView
                            android:id="@+id/isHide_btn"
                            android:layout_width="85dp"
                            android:layout_height="27dp"
                            android:layout_weight="0.1"
                            android:layout_gravity="right"
                            android:layout_marginRight="4dip"
                            android:src="@drawable/radio_box_open" 
                            android:onClick="hideSetting"/>
                    </TableRow>
                </TableLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:orientation="vertical" >

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_top_corner_no_bottom_line"
                        android:paddingLeft="12dip"
                        android:paddingTop="12dip"
                        android:paddingBottom="12dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:layout_gravity="left"
                            android:text="@string/update_password"
                            android:textColor="@color/black"
                            android:textSize="15sp" >
                        </TextView>
                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_weight="0.1"
                            android:layout_gravity="right"
                            android:src="@drawable/arrows_icon" />
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_bottom_corner_no_top_line"
                        android:paddingLeft="12dip"
                        android:paddingTop="12dip"
                        android:paddingBottom="12dip">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:layout_gravity="left"
                            android:layout_marginRight="10dip"
                            android:text="@string/about_capsule"
                            android:textColor="@color/black"
                            android:textSize="15sp" >
                        </TextView>
                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_weight="0.1"
                            android:layout_gravity="right"
                            android:src="@drawable/arrows_icon" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
		<LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="6dp"
                android:orientation="vertical" >
				<Button android:id="@+id/exitBtn"
		            android:text="@string/exit"
		            android:layout_width="match_parent"
		        	android:layout_height="40dip"
		        	android:layout_marginBottom="10dip"
                    android:textColor="@color/black"
                    android:textSize="15sp"
		        	android:background="@drawable/register_btn_selector"
		        	android:contentDescription="@string/exit"
		        	android:onClick="exitCapsule"/>
		        
		        <Button android:id="@+id/logoutBtn"
		            android:text="@string/logout"
		            android:layout_width="match_parent"
		        	android:layout_height="40dip"
		        	android:textSize="15sp"
		        	android:textColor="@color/black"
		        	android:background="@drawable/login_btn_selector"
		        	android:contentDescription="@string/logout"
		        	android:onClick="logoutCapsult"/>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>